--- a/assets/scss/colors/gruv-dark.scss
+++ b/assets/scss/colors/gruv-dark.scss
@@ -5,9 +5,9 @@ $color-background-code: lighten($color-background, 2%);
 $color-border: #928374;
 $color-meta: #928374;
 $color-meta-code: #928374;
-$color-link: rgba(212, 128, 170, 1);
+$color-link: rgba(177, 98, 134, 1);
 $color-text: #ebdbb2;
 $color-accent-3: #d79921;
 $color-accent-2: #fb4934;
 $color-accent-1: #689d6a;
-$color-quote: #ccffb6;
+$color-quote: #8ec07c;
