Changed light theme accent and quote colors

--- a/assets/scss/colors/light.scss
+++ b/assets/scss/colors/light.scss
@@ -10,5 +10,5 @@ $color-link: rgba(43, 188, 138, 1);
 $color-text: #363533;
 $color-accent-3: #666666;
 $color-accent-2: #111111;
-$color-accent-1: #d44375;
-$color-quote: #ab2251;
+$color-accent-1: #557C55;
+$color-quote: #A6CF98;
