Added goat counter analytics

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -47,4 +47,5 @@
     {{ template "_internal/google_analytics.html" . }}
   {{ end }}
   {{ end }}
+  <script data-goatcounter="https://michaelcosj.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
